--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,9 @@
 
       <section class="card results">
         <h2>Latest registrations</h2>
-        <p class="subtitle">Stored records with localized greetings.</p>
+        <p class="subtitle">
+          Stored records with localized greetings and localized record details.
+        </p>
         <div id="results"></div>
       </section>
     </main>
